layout issues with locus widget battled

--- a/kiosk/plugins/directorsviewplugin/app/src/component-dataframe.sass
+++ b/kiosk/plugins/directorsviewplugin/app/src/component-dataframe.sass
@@ -11,8 +11,8 @@ div, p
   justify-content: space-between
   padding-top: 1em
   //padding-top: 180px
-  padding-left: 1em
-  padding-right: 1em
+  //padding-left: 0em
+  //padding-right: 0em
   width: 100%
   box-sizing: border-box
   @media #{$screen-max-800}
