--- a/kiosk/plugins/directorsviewplugin/app/src/datawidgets/component-locus-widget.sass
+++ b/kiosk/plugins/directorsviewplugin/app/src/datawidgets/component-locus-widget.sass
@@ -31,7 +31,7 @@ div, p
   grid-template-columns: repeat(8, auto)
   border-top: solid $col-bg-1-darker 2px
   div
-    padding-right: 1em
+    padding-right: .5em
 .locus-list.locus-list-with-member
   grid-template-columns: repeat(9, auto)
 .list-header
@@ -42,7 +42,7 @@ div, p
   word-wrap: break-word
   border-bottom: solid $col-bg-1-darker 1px
   &.tighter
-    max-width: 4em
+    max-width: 4.5em
 .headline
   background-color: $col-bg-1-lighter
   color: $col-primary-bg-1
